Major update to 0.6.0

--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
     "host": "localhost",
     "port": 1883,
     "topic": "ring/",
+	"hass_topic": "hass/status",
     "mqtt_user": "",
     "mqtt_pass": "",
     "ring_user": "<ring_email>",
