- Added stdio package to get commandline arguments easier. - Added support to pass --locationIds to the js file to allow specifying individual locations if you are a user that has multiple locations (shared or otherwise) and only want to create websocket connections for only the locations you want.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "@dgreif/ring-alarm": "^1.5.0",
     "debug": "^4.1.1",
-    "mqtt": "^2.18.8"
+    "mqtt": "^2.18.8",
+    "stdio": "^0.2.7"
   },
   "devDependencies": {},
   "scripts": {
