--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "debug": "^4.1.1",
     "mqtt": "^3.0.0",
-    "ring-client-api": "^6.2.0-alpha.0"
+    "ring-client-api": "^7.0.0",
+    "express": "^4.17.1",
+    "body-parser": "^1.19.0"
   },
   "devDependencies": {},
   "scripts": {
