Update for 3.0.0-beta3
* Clean up config.json
* Update to ring-client-api 7.0.0
* Add default cofig values for docker environment
* Readme updates

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ring-mqtt",
-  "version": "3.0.0-beta.2",
+  "version": "3.0.0-beta3",
   "description": "Ring to MQTT Bridge",
   "main": "ring-mqtt.js",
   "dependencies": {
