--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "express": "^4.17.1",
     "body-parser": "^1.19.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^6.8.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ring-mqtt.js"
