--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "ring-mqtt",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "description": "Ring to MQTT Bridge",
   "main": "ring-mqtt.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "debug": "^4.1.1",
-    "mqtt": "^3.0.0",
-    "ring-client-api": "^7.0.0",
     "express": "^4.17.1",
-    "body-parser": "^1.19.0"
+    "is-online": "^8.4.0",
+    "mqtt": "^3.0.0",
+    "ring-client-api": "^9.6.0",
+    "yargs-parser": "^18.1.3"
   },
   "devDependencies": {
     "eslint": "^6.8.0"
