--- a/ring-mqtt.service
+++ b/ring-mqtt.service
@@ -1,6 +1,7 @@
 #!/bin/sh -
 [Unit]
 Description=ring-mqtt
+After=network.target
 
 [Service]
 ExecStart=/usr/bin/node /opt/ring-mqtt/ring-mqtt.js
@@ -9,7 +10,10 @@ User=homeassistant
 Group=homeassistant
 Environment=PATH=/usr/bin/
 Environment=NODE_ENV=production
-WorkingDirectory=/usr/bin/
+Environment=DEBUG=ring-mqtt
+StandardOutput=file:/var/log/ring-mqtt.log
+StandardError=file:/var/log/ring-mqtt.log
+WorkingDirectory=/opt/ring-mqtt
 
 [Install]
 WantedBy=multi-user.target
