--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "host": "localhost",
     "port": 1883,
     "ring_topic": "ring",
-    "hass_topic": "hass/status",
+    "hass_topic": "homeassistant/status",
     "mqtt_user": "",
     "mqtt_pass": "",
     "ring_token": "",
