Add support for panic buttons
* Must be explicitly enabled with "enable_panic"

--- a/config.json
+++ b/config.json
@@ -8,5 +8,6 @@
     "ring_token": "",
     "enable_cameras": false,
     "enable_modes" : false,
+    "enable_panic" : false,
     "location_ids": [""]
 }
