--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
     "mqtt_pass": "",
     "ring_token": "",
     "enable_cameras": false,
+    "enable_snapshots": false,
     "enable_modes" : false,
     "enable_panic" : false,
     "enable_volume" : false,
