Snapshot Refresh Support
* Cache snapshot as camera attribute
* Support motion, interval, or all snapshot refresh options
* Support manual override of refresh interval via MQTT command
* Support 30 second refresh by for battery cameras in wired power mode

--- a/config.json
+++ b/config.json
@@ -7,9 +7,11 @@
     "mqtt_pass": "",
     "ring_token": "",
     "enable_cameras": false,
-    "enable_snapshots": false,
-    "enable_modes" : false,
-    "enable_panic" : false,
-    "enable_volume" : false,
-    "location_ids": [""]
+    "enable_snapshots": "none",
+    "enable_modes": false,
+    "enable_panic": false,
+    "enable_volume": false,
+    "location_ids": [
+        ""
+    ]
 }
