--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "body-parser": "^1.19.0",
     "debug": "^4.3.1",
     "express": "^4.17.1",
+    "get-port": "^5.1.1",
     "is-online": "^9.0.0",
     "mqtt": "^4.2.6",
-    "ring-client-api": "^9.17.0",
-    "pipe2jpeg": "^0.3.1"
+    "pipe2jpeg": "^0.3.1",
+    "ring-client-api": "^9.17.0"
   },
   "devDependencies": {
     "eslint": "^7.19.0"
