Use null instead of empty string as default mqtt user/pass
Ref: https://stackoverflow.com/questions/35704632/mqtt-socket-error-on-client-unknown

For connecting anonymously I experienced issues. Specifying ""
as username and password is apparently not anonymous enough.

This is the error I keep getting while attempting to
connect to the broker (mosquitto 1.5.7-1+deb10u1):

New connection from 192.168.1.213 on port 1883.
Socket error on client <unknown>, disconnecting.

--- a/config.json
+++ b/config.json
@@ -3,8 +3,8 @@
     "port": 1883,
     "ring_topic": "ring",
     "hass_topic": "homeassistant/status",
-    "mqtt_user": "",
-    "mqtt_pass": "",
+    "mqtt_user": null,
+    "mqtt_pass": null,
     "ring_token": "",
     "enable_cameras": false,
     "snapshot_mode": "none",
