--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "ring-mqtt",
-  "version": "4.5.5",
+  "version": "4.5.6",
   "description": "Ring to MQTT Bridge",
   "main": "ring-mqtt.js",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "debug": "^4.3.1",
+    "debug": "^4.3.2",
     "express": "^4.17.1",
     "get-port": "^5.1.1",
-    "is-online": "^9.0.0",
-    "mqtt": "^4.2.6",
+    "got": "^11.8.2",
+    "is-online": "^9.0.1",
+    "mqtt": "^4.2.8",
     "pipe2jpeg": "^0.3.1",
-    "ring-client-api": "^9.18.0"
+    "@tsightler/ring-client-api": "9.18.1-custom.2"
   },
   "devDependencies": {
     "eslint": "^7.19.0"
