--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "is-online": "^9.0.1",
     "mqtt": "^4.2.8",
     "pipe2jpeg": "^0.3.1",
-    "ring-client-api": "9.18.1"
+    "ring-client-api": "tsightler/ring-client-api"
   },
   "devDependencies": {
     "eslint": "^7.19.0"
