--- a/rss-ring-mqtt.yml
+++ b/rss-ring-mqtt.yml
@@ -17,9 +17,9 @@ paths:
     fallback:
     disablePublisherOverride: no
 
-  camera1:
+  ring/a9ce28cb-fafb-421c-4508-29d54f48cbd3/camera/3ce1a15e2437/stream:
     source: publisher
-    runOnDemand: mosquitto_pub -u ${MQTTUSER} -P ${MQTTPASSWORD} -h ${MQTTHOST} -p ${MQTTPORT} -t "ring/stream/camera1" -m 'start'
+    runOnDemand: mosquitto_pub -u ${MQTTUSER} -P ${MQTTPASSWORD} -h ${MQTTHOST} -p ${MQTTPORT} -t "ring/a9ce28cb-fafb-421c-4508-29d54f48cbd3/camera/3ce1a15e2437/stream" -m 'start'
     runOnDemandRestart: yes
     runOnDemandStartTimeout: 20s
     runOnDemandCloseAfter: 5s
