--- a/config/rtsp-simple-server.yml
+++ b/config/rtsp-simple-server.yml
@@ -17,8 +17,8 @@ paths:
     fallback:
     disablePublisherOverride: no
 
-ring:
-  source: 3ce1a15e2437_stream
+3ce1a15e2437_stream:
+  source: publisher
   runOnDemand: /usr/bin/mosquitto_pub -u $MQTTUSER -P $MQTTPASSWORD -h $MQTTHOST -p $MQTTPORT -t ring/a9ce28cb-fafb-421c-4508-29d54f48cbd3/camera/3ce1a15e2437/stream/command -m ON
   runOnDemandRestart: yes
   runOnDemandStartTimeout: 20s
