--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "is-online": "^9.0.1",
     "mqtt": "^4.2.8",
     "pipe2jpeg": "^0.3.1",
-    "ring-client-api": "^9.21.0"
+    "ring-client-api": "^9.21.0",
+    "respawn": "^2.6.0"
   },
   "devDependencies": {
     "eslint": "^7.19.0"
