--- a/config/rtsp-simple-server.yml
+++ b/config/rtsp-simple-server.yml
@@ -2,9 +2,9 @@ readTimeout: 2s
 readBufferCount: 1024
 
 rtspDisable: no
-protocols: [tcp, udp]
+protocols: [udp, tcp]
 rtspAddress: 0.0.0.0:8554
-rtpAddress: 127.0.0.1:8000
+rtpAddress: 0.0.0.0:8000
 
 rtmpDisable: yes
 
@@ -16,7 +16,7 @@ hlsSegmentDuration: 1s
 hlsAllowOrigin: '*'
 
 api: yes
-apiAddress: 127.0.0.1:8443
+apiAddress: 127.0.0.1:8880
 
 paths:
   all:
