--- a/config/rtsp-simple-server.yml
+++ b/config/rtsp-simple-server.yml
@@ -2,11 +2,11 @@ readTimeout: 2s
 readBufferCount: 1024
 
 rtspDisable: no
-protocols: [udp, tcp]
+protocols: [tcp]
 rtspAddress: 0.0.0.0:8554
-rtpAddress: 127.0.0.1:8000
 
-rtmpDisable: yes
+rtmpDisable: no
+rtmpAddress: :1935
 
 hlsDisable: no
 hlsAddress: :8888
