--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "got": "^11.8.3",
     "ip": "^1.1.5",
     "is-online": "^9.0.1",
+    "write-file-atomic": "^4.0.0",
     "mqtt": "^4.3.4",
     "pipe2jpeg": "^0.3.1",
     "ring-client-api": "^9.24.0"
