--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "write-file-atomic": "^4.0.0",
     "mqtt": "^4.3.4",
     "pipe2jpeg": "^0.3.1",
-    "ring-client-api": "^9.24.0"
+    "@tsightler/ring-client-api": "10.0.0-beta.0"
   },
   "devDependencies": {
     "eslint": "^7.19.0"
