--- a/init/systemd/ring-mqtt.service
+++ b/init/systemd/ring-mqtt.service
@@ -8,7 +8,7 @@ ExecStart=/usr/bin/node /opt/ring-mqtt/ring-mqtt.js
 Restart=always
 User=root
 Group=root
-Environment=PATH=/usr/bin/
+Environment=PATH=/usr/bin/:/usr/local/bin
 Environment=NODE_ENV=production
 Environment=DEBUG=ring-mqtt
 StandardOutput=file:/var/log/ring-mqtt.log
