Revert to custom ring-client-api 9.x

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "write-file-atomic": "^4.0.0",
     "mqtt": "4.3.4",
     "pipe2jpeg": "^0.3.1",
-    "@tsightler/ring-client-api": "10.0.0-beta.1"
+    "@tsightler/ring-client-api": "9.25.0-custom.0"
   },
   "devDependencies": {
     "eslint": "^7.19.0"
