Back to TCP for RTSP

--- a/config/rtsp-simple-server.yml
+++ b/config/rtsp-simple-server.yml
@@ -2,7 +2,7 @@ readTimeout: 5s
 readBufferCount: 1024
 
 rtspDisable: no
-protocols: [udp]
+protocols: [tcp]
 rtspAddress: 0.0.0.0:8554
 
 rtmpDisable: yes
