--- a/config/rtsp-simple-server.yml
+++ b/config/rtsp-simple-server.yml
@@ -1,12 +1,11 @@
 readTimeout: 10s
-readBufferCount: 8192
+readBufferCount: 32768
 
 rtspDisable: no
 protocols: [tcp, udp]
 rtspAddress: 0.0.0.0:8554
 
-rtmpDisable: no
-rtmpAddress: 127.0.0.1:1935
+rtmpDisable: yes
 
 hlsDisable: yes
 
