--- a/config.json
+++ b/config.json
@@ -1,14 +1,10 @@
 {
-    "host": "localhost",
-    "port": 1883,
-    "mqtt_user": "",
-    "mqtt_pass": "",
+    "mqtt_url": "mqtt://localhost:1883",
     "disarm_code": "",
     "beam_duration": 0,
-    "enable_cameras": false,
-    "snapshot_mode": "none",
     "livestream_user": "",
     "livestream_pass": "",
+    "enable_cameras": true,
     "enable_modes": false,
     "enable_panic": false,
     "hass_topic": "homeassistant/status",
