--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "minimist": "^1.2.6",
     "mqtt": "4.3.7",
     "aedes": "0.46.3",
-    "ring-client-api": "10.0.0-beta.5"
+    "ring-client-api": "11.0.0"
   },
   "devDependencies": {
     "eslint": "^7.19.0"
