--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "body-parser": "^1.20.0",
     "debug": "^4.3.4",
     "express": "^4.18.1",
-    "got": "^11.8.3",
-    "ip": "^1.1.5",
-    "is-online": "^9.0.1",
+    "got": "^11.8.5",
+    "ip": "^1.1.8",
+    "is-online": "9.0.1",
     "write-file-atomic": "^4.0.1",
     "minimist": "^1.2.6",
     "mqtt": "4.3.7",
     "aedes": "0.47.0",
-    "ring-client-api": "11.0.5"
+    "ring-client-api": "11.0.7"
   },
   "devDependencies": {
     "eslint": "^7.19.0"
