--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "minimist": "^1.2.6",
     "mqtt": "4.3.7",
     "aedes": "0.47.0",
-    "ring-client-api": "11.1.0"
+    "ring-client-api": "^11.2.1"
   },
   "devDependencies": {
     "eslint": "^7.19.0"
