Use alternate method for addon detection

--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "ring-mqtt",
-  "version": "5.0.4-beta.2",
+  "version": "5.0.4-beta.3",
   "description": "Ring Devices via MQTT",
   "main": "ring-mqtt.js",
   "dependencies": {
-    "body-parser": "^1.20.0",
+    "body-parser": "^1.20.1",
     "debug": "^4.3.4",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "got": "^11.8.5",
     "ip": "^1.1.8",
     "is-online": "9.0.1",
-    "write-file-atomic": "^4.0.1",
+    "write-file-atomic": "^4.0.2",
     "minimist": "^1.2.6",
     "mqtt": "4.3.7",
-    "aedes": "0.47.0",
-    "@tsightler/ring-client-api": "^11.2.1-ts.3"
+    "aedes": "0.48.0",
+    "ring-client-api": "^11.3.0"
   },
   "devDependencies": {
     "eslint": "^7.19.0"
