--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ring-mqtt",
-  "version": "5.0.4-beta.3",
+  "version": "5.0.4",
   "description": "Ring Devices via MQTT",
   "main": "ring-mqtt.js",
   "dependencies": {
