--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -9,7 +9,7 @@ body:
         Before opening an issue, please search for all open and closed Github issues as well
         as any relevant discussion topics that may match your situation.
         
-        Please do **not** open bugs for simple howto usage questions or basic operational issues
+        Please **DO NOT** open bugs for simple howto usage questions or basic operational issues
         such as "I can't get the live stream to work". Such issues should be directed to the 
         [discussion groups](https://github.com/tsightler/ring-mqtt/discussions) instead.
         
