--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -6,12 +6,12 @@ body:
   - type: markdown
     attributes:
       value: |
-        Before opening an issue, please search for all open and closed Github issues as well
-        as any relevant discussion topics that may match your situation.
+        Before opening an issue, please search for all open and closed Github issues as well as any
+        relevant discussion topics that may match your situation.
         
-        Please **DO NOT** open bugs for simple howto usage questions or basic operational issues
-        such as "I can't get the live stream to work". Such issues should be directed to the 
-        [discussion groups](https://github.com/tsightler/ring-mqtt/discussions) instead.
+        Please **DO NOT** open bugs for simple howto usage questions or basic operational issues such
+        as "I can't get the live stream to work". Such issues should be directed to the [discussion groups](https://github.com/tsightler/ring-mqtt/discussions) 
+        instead.
         
         Please include the information requested in the fields below completely or the issue will
         likely be closed immediately.
