--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ip": "^1.1.8",
     "is-online": "9.0.1",
     "write-file-atomic": "^4.0.2",
+    "js-yaml": "^4.1.0",
     "minimist": "^1.2.7",
     "mqtt": "4.3.7",
     "aedes": "0.48.1",
