Convert to ESM/replace colors with chalk

--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "ring-mqtt",
   "version": "5.1.0-beta.2",
+  "type": "module",
   "description": "Ring Devices via MQTT",
   "main": "ring-mqtt.js",
   "dependencies": {
     "body-parser": "^1.20.1",
     "debug": "^4.3.4",
+    "chalk": "^5.2.0",
     "express": "^4.18.2",
     "got": "^11.8.5",
     "ip": "^1.1.8",
-    "is-online": "9.0.1",
-    "write-file-atomic": "^4.0.2",
+    "is-online": "10.0.0",
+    "write-file-atomic": "^5.0.0",
     "js-yaml": "^4.1.0",
     "minimist": "^1.2.7",
     "mqtt": "4.3.7",
