--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "minimist": "^1.2.7",
     "mqtt": "4.3.7",
     "ring-client-api": "11.7.1",
-    "write-file-atomic": "^5.0.0"
+    "write-file-atomic": "^5.0.0",
+    "werift": "0.17.7",
+    "rxjs": "7.8.0"
   },
   "devDependencies": {
     "eslint": "^7.19.0"
