--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -13,6 +13,10 @@ body:
         as "I can't get the live stream to work". Such issues should be directed to the [discussion groups](https://github.com/tsightler/ring-mqtt/discussions) 
         instead.
         
+        Please **DO NOT** open bugs if you are not prepared to provide logs or answer questions in a
+        timely manner (at least every few days).  Issues that receive no followup responses will be
+        subject to closure after 72 hours.
+        
         Please include the information requested in the fields below completely or the issue will
         likely be closed immediately.
         
@@ -47,7 +51,7 @@ body:
     id: Logs
     attributes:
       label: Log Output
-      placeholder: Please include full logs as they will be needed in almost all cases.  If you decide to open an issue without providing full logs there's a 99% chance that you issue will be closed without response and you are probably better off open a discussion thread instead as I will not waste my time attemting to troubleshoot issues without logs.
+      placeholder: Please include the full ring-mqtt logs as they will be needed in almost all cases.  If you decide to open an issue without providing logs, or providing only a snippet of logs, be prepared that the first response will likely be to provide full logs.  If you do not want to post full logs here due to privacy concerns, you can send them to my username at gmail, and reference the issue number.  If you do not know how to gather full ring-mqtt logs for the addon, [see here](https://github.com/tsightler/ring-mqtt-ha-addon/blob/main/GET-LOGS.md)
       render: shell
     validations:
       required: true
