--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -51,7 +51,7 @@ body:
     id: Logs
     attributes:
       label: Log Output
-      placeholder: Please include the full ring-mqtt logs as they will be needed in almost all cases.  If you decide to open an issue without providing logs, or providing only a snippet of logs, be prepared that the first response will likely be to provide full logs.  If you do not want to post full logs here due to privacy concerns, you can send them to my username at gmail, and reference the issue number.  If you do not know how to gather full ring-mqtt logs for the addon, [see here](https://github.com/tsightler/ring-mqtt-ha-addon/blob/main/GET-LOGS.md)
+      placeholder: Please include the full ring-mqtt logs as they will be needed in almost all cases.  If you decide to open an issue without providing logs, or providing only a snippet of logs, be prepared that the first response will likely be to provide full logs.  If you do not want to post full logs here due to privacy concerns, you can send them to my email using the same username (tsightler) at gmail, and reference the issue number.  If you do not know how to gather full logs for the addon see https://github.com/tsightler/ring-mqtt-ha-addon/blob/main/GET-LOGS.md
       render: shell
     validations:
       required: true
