--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ring-mqtt",
-  "version": "5.3.0",
+  "version": "5.4.0",
   "type": "module",
   "description": "Ring Devices via MQTT",
   "main": "ring-mqtt.js",
@@ -15,7 +15,7 @@
     "js-yaml": "^4.1.0",
     "minimist": "^1.2.8",
     "mqtt": "^4.3.7",
-    "ring-client-api": "11.8.0-beta.0",
+    "ring-client-api": "11.8.0",
     "write-file-atomic": "^5.0.1",
     "werift": "^0.18.3",
     "rxjs": "^7.8.1"
