--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "js-yaml": "^4.1.0",
     "minimist": "^1.2.8",
     "mqtt": "^4.3.7",
-    "ring-client-api": "12.0.0-beta.2",
+    "ring-client-api": "12.0.0",
     "rxjs": "^7.8.1",
     "werift": "^0.18.5",
     "write-file-atomic": "^5.0.1"
