--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,1 +1,5 @@
 blank_issues_enabled: false
+contact_links:
+  - name: Feature Requests
+    url: https://github.com/tsightler/ring-mqtt/discussions/categories/feature-requests
+    about: Feature requests should be discussed in the approprirate discussions group.
