--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ring-mqtt",
-  "version": "5.6.7",
+  "version": "5.7.0-dev",
   "type": "module",
   "description": "Ring Devices via MQTT",
   "main": "ring-mqtt.js",
@@ -15,7 +15,7 @@
     "js-yaml": "^4.1.0",
     "minimist": "^1.2.8",
     "mqtt": "^5.7.0",
-    "ring-client-api": "12.1.1",
+    "ring-client-api": "13.0.0-beta.2",
     "rxjs": "^7.8.1",
     "werift": "^0.19.3",
     "write-file-atomic": "^5.0.1"
