--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ring-mqtt",
-  "version": "5.7.0-dev",
+  "version": "5.7.0",
   "type": "module",
   "description": "Ring Devices via MQTT",
   "main": "ring-mqtt.js",
@@ -22,6 +22,9 @@
   },
   "devDependencies": {
     "eslint": "^7.32.0"
+  },
+  "overrides": {
+    "@eneris/push-receiver": "4.1.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
