--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
     "js-yaml": "^4.1.0",
     "minimist": "^1.2.8",
     "mqtt": "^5.8.1",
-    "ring-client-api": "13.0.0-beta.5",
+    "ring-client-api": "^13.0.0",
     "rxjs": "^7.8.1",
     "werift": "^0.19.4",
     "write-file-atomic": "^5.0.1"
   },
   "devDependencies": {
-    "eslint": "^7.32.0"
+    "@eslint/js": "^9.8.0",
+    "eslint": "^9.8.0",
+    "globals": "^15.9.0"
   },
   "overrides": {
-    "@eneris/push-receiver": "4.1.3"
+    "@eneris/push-receiver": "4.1.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
