--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Ring Devices via MQTT",
   "main": "ring-mqtt.js",
   "dependencies": {
+    "@tsightler/push-receiver": "^4.1.5",
     "aedes": "0.51.2",
     "body-parser": "^1.20.2",
     "chalk": "^5.3.0",
