--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -23,7 +23,14 @@ body:
       label: Have you read and followed any recommendations in the Support and Troubleshooting section of the wiki?
       description: If your issues is covered in [the wiki](https://github.com/tsightler/ring-mqtt/discussions) please follow all steps there prior to opening an issue.
       options:
-        - label: I have read the support wiki and followed any applicable steps for my issue.
+        - label: I have read the support wiki and followed any applicable steps.
+          required: true
+  - type: checkboxes
+    attributes:
+      label: Is this issue after an upgrade? 
+      description: If this issues started after an upgrade, have you read the [release notes](https://github.com/tsightler/ring-mqtt/releases) for any mitigating information?
+      options:
+        - label: This not an upgrade issues or I have read the release notes and performed any applicable steps.
           required: true
   - type: checkboxes
     attributes:
